<resources>
    <string name="app_name">Waste Wizard</string>
    <string name="btn_getstarted">Get Started</string>
    <string name="getStarted">Get Started</string>
    <string name="solusiSampah">Solusi Sampah yang Merajalela</string>
    <string name="signup">Sign Up</string>
    <string name="headersignup">Hello,\nSign Up Now!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="headerlogin">Hello,\nLogin Now!</string>
    <string name="createacc">Belum Punya Akun?</string>
    <string name="klasifikasi_sampah">Klasifikasi Sampah</string>
    <string name="pickup_sampah">Pick Up\nSampah</string>
    <string name="signup_lebihmudah">Sign Up sekarang lebih mudah!</string>
    <string name="signup_google">Lanjutkan dengan Google</string>
    <string name="signup_email">Gunakan email</string>
    <string name="sudahpunyaakun">Sudah Punya Akun?</string>
    <string name="klasifikasikan_sampahmu">Klasifikasikan Sampahmu!</string>
    <string name="klasifikasi_desc"><![CDATA[Dengan fitur Klasifikasi kamu dapat membedakan\nyang mana sampah Organik & Anorganik]]></string>
    <string name="galeri">Galeri</string>
    <string name="scan">Scan</string>
    <string name="update">Update</string>
    <string name="upload">Upload</string>
</resources>